constraints/general-requiredlabels-samples-all-must-have-owner-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata: # kpt-merge: /all-must-have-owner
  name: all-must-have-owner
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
      - config-management-monitoring
      - config-management-system
      - gatekeeper-system
      - gke-connect
      - kube-public
      - kube-node-lease
      - kube-system
      - resource-group-system
  parameters:
    message: "All namespaces must have an `owner` label that points to your company username"
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.agilebank.demo$"
